[package]
name = "adventofcode-2025"
version = "0.1.0"
authors = ["Victor Allen <vwallen@antlab.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
itertools = "0.12.0"
sscanf = "0.4.1"
counter = "0.5.7"
divan = "0.1.5"
cached = "0.46.1"
indexmap = "2.1.0"


[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false
